--- a/HTML/assets/css/custom-styles.css
+++ b/HTML/assets/css/custom-styles.css
@@ -19,7 +19,8 @@ body {
 
 #page-wrapper {
     padding: 15px 15px;
-    min-height: 600px;
+    /*min-height: 600px;*/
+	height:auto;
     background: #FFFFFF;
    
 }
@@ -495,7 +496,8 @@ line-height: 1.428571429;
      #page-wrapper{
         margin: 0 0 0 260px;
         padding: 15px 30px;
-        min-height: 1200px;
+        /*min-height: 1200px;*/
+		height:auto;
 		
     }
 	 #page-wrapper-home{
