--- a/HTML/assets/css/custom-styles.css
+++ b/HTML/assets/css/custom-styles.css
@@ -496,7 +496,7 @@ line-height: 1.428571429;
      #page-wrapper{
         margin: 0 0 0 260px;
         padding: 15px 30px;
-        /*min-height: 1200px;*/
+        min-height: 1200px;
 		height:auto;
 		
     }
