--- a/HTML/assets/css/bootstrap.css
+++ b/HTML/assets/css/bootstrap.css
@@ -468,6 +468,7 @@ h6,
 p {
   margin: 0 0 10px;
 }
+
 .lead {
   margin-bottom: 20px;
   font-size: 16px;
@@ -773,6 +774,7 @@ pre code {
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
   float: left;
 }
+
 .col-xs-12 {
   width: 100%;
 }
@@ -926,6 +928,7 @@ pre code {
 .col-xs-offset-0 {
   margin-left: 0;
 }
+
 @media (min-width: 768px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
@@ -1241,6 +1244,7 @@ pre code {
   .col-md-offset-0 {
     margin-left: 0;
   }
+
 }
 @media (min-width: 1200px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
@@ -1450,6 +1454,7 @@ th {
 }
 .table-bordered {
   border: 1px solid #ddd;
+   width:100%;
 }
 .table-bordered > thead > tr > th,
 .table-bordered > tbody > tr > th,
@@ -1458,19 +1463,22 @@ th {
 .table-bordered > tbody > tr > td,
 .table-bordered > tfoot > tr > td {
   border: 1px solid #ddd;
+  height:40px;
 }
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
   border-bottom-width: 2px;
+   height:40px;
 }
 .table-striped > tbody > tr:nth-child(odd) > td,
 .table-striped > tbody > tr:nth-child(odd) > th {
-  background-color: #f9f9f9;
+  /*background-color: #f9f9f9;*/
 }
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
-  background-color: #f5f5f5;
+  /*background-color: #f5f5f5;*/.
 }
+
 table col[class*="col-"] {
   position: static;
   display: table-column;
@@ -5779,3 +5787,12 @@ button.close {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+#image
+{
+float:right;
+margin-top:-5px;
+}
+.left
+{
+float:left;
+}
