--- a/HTML/assets/css/custom-styles.css
+++ b/HTML/assets/css/custom-styles.css
@@ -127,12 +127,20 @@ padding: 31px 10px 13px;
     background-color:#fff;
 
 }
+.panel-default > .panel-heading-detailed {
+	color: #000;
+	background-color: #FFFFFF;
+	border-color: #ddd;
+	font-weight:bold;
+	background: #FAFAFA;
+	padding: 10px;
+}
 .panel-default > .panel-heading {
-color: #000;
-background-color: #FFFFFF;
-border-color: #ddd;
-font-weight:bold;
-background: #FAFAFA;
+	background: none repeat scroll 0 0 lightslategrey;
+    border-color: #ddd;
+    color: #fff;
+    font-size: 20px;
+    height: 70px;
 }
 .jumbotron, .well{
 background:#fff;
@@ -548,5 +556,74 @@ font-size: 19px;
   color: white;
   box-shadow: 2px 2px 2px #666;
 }
+.Yellow
+{
+
+background: #ffff88; /* Old browsers */
+background: -moz-linear-gradient(top,  #ffff88 0%, #fcfc80 31%, #ffff84 56%, #fcf419 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffff88), color-stop(31%,#fcfc80), color-stop(56%,#ffff84), color-stop(100%,#fcf419)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #ffff88 0%,#fcfc80 31%,#ffff84 56%,#fcf419 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #ffff88 0%,#fcfc80 31%,#ffff84 56%,#fcf419 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #ffff88 0%,#fcfc80 31%,#ffff84 56%,#fcf419 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #ffff88 0%,#fcfc80 31%,#ffff84 56%,#fcf419 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', endColorstr='#fcf419',GradientType=0 ); /* IE6-9 */
 
 
+    font-size: 18px;
+    text-align: center;
+	color: #333;
+	font-family: Georgia;
+}
+
+.Green
+{
+ background: -moz-linear-gradient(45deg, rgba(15,255,123,1) 0%, rgba(0,128,128,1) 100%); /* ff3.6+ */
+background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(15,255,123,1)), color-stop(100%, rgba(0,128,128,1))); /* safari4+,chrome */
+background: -webkit-linear-gradient(45deg, rgba(15,255,123,1) 0%, rgba(0,128,128,1) 100%); /* safari5.1+,chrome10+ */
+background: -o-linear-gradient(45deg, rgba(15,255,123,1) 0%, rgba(0,128,128,1) 100%); /* opera 11.10+ */
+background: -ms-linear-gradient(45deg, rgba(15,255,123,1) 0%, rgba(0,128,128,1) 100%); /* ie10+ */
+background: linear-gradient(45deg, rgba(15,255,123,1) 0%, rgba(0,128,128,1) 100%); /* w3c */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#008080', endColorstr='#0FFF7B',GradientType=1 );
+    font-size: 18px;
+    text-align: center;
+	color: #333;
+	font-family: Georgia;
+}
+.Red
+{
+
+background: #f2825b; /* Old browsers */
+background: -moz-linear-gradient(top,  #f2825b 0%, #e55b2b 50%, #ef460e 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f2825b), color-stop(50%,#e55b2b), color-stop(100%,#ef460e)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #f2825b 0%,#e55b2b 50%,#ef460e 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #f2825b 0%,#e55b2b 50%,#ef460e 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #f2825b 0%,#e55b2b 50%,#ef460e 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #f2825b 0%,#e55b2b 50%,#ef460e 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2825b', endColorstr='#ef460e',GradientType=0 ); /* IE6-9 */
+
+    font-size: 18px;
+    text-align: center;
+	color: #333;
+	font-family: Georgia;
+}
+#dataTables-example thead {
+    background: none repeat scroll 0 0 dimgrey;
+    color: #fff;
+}
+#dataTables-example .center a {
+    color: grey;
+	}
+#units
+{
+font-size:12px;
+}	
+.panel {
+    border:2px solid darkgrey;   
+	border-radius:5px;
+}
+#dataTables-example td {
+    border: 8px solid #fff;
+}
+#dataTables-example .even {
+    background: #F0FCFF;
+}
