--- a/phase1/view/assets/css/bootstrap.css
+++ b/phase1/view/assets/css/bootstrap.css
@@ -1423,7 +1423,7 @@ th {
 .table > tfoot > tr > td {
   padding: 8px;
   line-height: 1.42857143;
-  vertical-align: top;
+  /*vertical-align: top;*/
   border-top: 1px solid #ddd;
 }
 .table > thead > tr > th {
@@ -1468,7 +1468,8 @@ th {
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
   border-bottom-width: 2px;
-   height:40px;
+   height:30px;
+   padding-bottom:15px
 }
 .table-striped > tbody > tr:nth-child(odd) > td,
 .table-striped > tbody > tr:nth-child(odd) > th {
