--- a/phase2/view/assets/css/bootstrap.css
+++ b/phase2/view/assets/css/bootstrap.css
@@ -1468,7 +1468,8 @@ th {
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
   border-bottom-width: 2px;
-   height:40px;
+   height: 30px;
+  padding-bottom: 15px;
 }
 .table-striped > tbody > tr:nth-child(odd) > td,
 .table-striped > tbody > tr:nth-child(odd) > th {
