--- a/phase2/view/assets/css/custom-styles.css
+++ b/phase2/view/assets/css/custom-styles.css
@@ -329,6 +329,7 @@ font-size: 30px;
 font-weight: 700;
 text-transform: uppercase;
 line-height: 30px;
+margin-left:15px;
 }
 .top-navbar .nav > li {
 position: relative;
@@ -625,12 +626,13 @@ color: #fff;
 width: 260px;
 text-align: left;
 height: 60px;
-font-size: 12px;
+font-size: 15px;
 font-weight: 700;
 text-transform: uppercase;
-line-height: 30px;
+line-height: 60px;
 text-decoration:none;
 padding:30px;
+margin-right:10px;
 
 }
 .parameter-align {
