--- a/phase1/view/assets/css/custom-styles.css
+++ b/phase1/view/assets/css/custom-styles.css
@@ -663,6 +663,13 @@ td.yellow-new {
   text-align: center;
   vertical-align: middle!important;
 }
+td.grey-new {
+  background: url(../img/light-grey.png);
+  background-size: 100% 54px;
+  background-repeat	:no-repeat;
+  text-align: center;
+  vertical-align: middle!important;
+}
 .green-new {
   background: url(../img/green.png);
   background-size: 100% 54px;
