--- a/dashboard/application/views/assets/css/custom-styles.css
+++ b/dashboard/application/views/assets/css/custom-styles.css
@@ -36,7 +36,15 @@ body {
     margin:10px 20px 10px 0px;
     background-color:transparent;
     padding:10px;
-    /*min-height:1200px;*/
+   /* min-height:1200px;*/
+}
+
+#page-inner-custom {
+    width:100%;
+    margin:10px 20px 10px 0px;
+    background-color:transparent;
+    padding:10px;
+    min-height:1200px;
 }
 
 .text-center {
