--- a/dashboard/application/views/assets/css/bootstrap.css
+++ b/dashboard/application/views/assets/css/bootstrap.css
@@ -1469,7 +1469,9 @@ th {
 .table-bordered > thead > tr > td {
   border-bottom-width: 2px;
    height:30px;
-   padding-bottom:15px
+   padding-bottom:15px;
+   background-color:  dimgrey;
+   color:#fff;
 }
 .table-striped > tbody > tr:nth-child(odd) > td,
 .table-striped > tbody > tr:nth-child(odd) > th {
